# reddit_scraper

./: .gitignore  README.md  animal_comparison.ini  databases.py  pyproject.toml  python_test.ini  reddit_scraper.py  requirements.txt  scrape.py  scrape_test.ipynb  scraper.py  suicidewatch.ini  tech_subreddits.ini  test.sqlite
data/databases/: animal_comparison.sqlite
data/scraped/python/: 2020-10-13_comments.csv  2020-10-13_posts.csv
python_test/: python_test.sqlite
python_test/csv/: 2020-10-13_python_comments.csv  2020-10-13_python_posts.csv
scraped/example/csv/: 2020-12-05_python_comments.csv  2020-12-05_python_posts.csv
scraper_configs/: python_test.ini  tech_subreddits.ini
tech_subreddits/: tech_subreddits.sqlite
tech_subreddits/csv/: 2020-10-13_aws_comments.csv  2020-10-13_aws_posts.csv  2020-10-13_awscertifications_comments.csv  2020-10-13_awscertifications_posts.csv  2020-10-13_bigdata_comments.csv  2020-10-13_bigdata_posts.csv  2020-10-13_css_comments.csv  2020-10-13_css_posts.csv  2020-10-13_deeplearning_comments.csv  2020-10-13_deeplearning_posts.csv  2020-10-13_html_comments.csv  2020-10-13_html_posts.csv  2020-10-13_java_posts.csv  2020-10-13_javascript_comments.csv  2020-10-13_javascript_posts.csv  2020-10-13_pandas_comments.csv  2020-10-13_pandas_posts.csv  2020-10-13_scikit_learn_comments.csv  2020-10-13_scikit_learn_posts.csv  2020-10-13_shittyprogramming_comments.csv  2020-10-13_shittyprogramming_posts.csv  2020-10-13_sql_comments.csv  2020-10-13_sql_posts.csv  2020-10-13_tensorflow_comments.csv  2020-10-13_tensorflow_posts.csv
(+57 files in other folders)
