[tool.poetry]
name = "reddit_scraper"
version = "0.1.0"
description = ""
authors = ["Chris Birch <chrisbirch@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
pandas = "^1.1.4"
numpy = "^1.19.4"
scikit-learn = "^0.23.2"
xgboost = "^1.2.1"
tqdm = "^4.54.1"
ipython = "^7.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
